refactor: убрать контекст из интерфейса логгера
